[package]
name = "twapi-reqwest-retriable"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "~1.8.0"
thiserror = "~1.0.26"
tokio = { version = "^1", features = ["time"] }
twapi-reqwest = "~0.2.0"
