[package]
name = "twapi-reqwest-retriable"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "~1.5.2"
thiserror = "~1.0.23"
tokio = { version = "^0.2", features = ["time"] }
twapi-reqwest = "~0.3.0"
